CodeCache::allocate increments '_number_of_blobs' even if allocation fails.

XMLWordPrintable

    • b15
    • generic
    • generic

      The code cache keeps track of the number of blobs that are currently stored in the code cache (_number_of_blobs). If the code cache is full and allocation fails, '_number_of_blobs' is incremented although it should not.

            Assignee:
            Tobias Hartmann
            Reporter:
            Albert Noll (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: