8029343: CodeCache::allocate increments '_number_of_blobs' even if allocation fails

Incrementing the number of code blobs in CodeCache::allocate(...) is now only performed if allocation succeeds. The guarantee is fixed.

Reviewed-by: kvn, iveresov